# vcpkg_repro

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
